--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   
   color-scheme: light dark;
-  color: #0F2C59;
+  /* color: #0F2C59; */
   background-color: #abaaa9;
   
   font-synthesis: none;
@@ -15,6 +15,7 @@
   }
   body {
   margin: 0;
+  padding: o;
   display: flex;
   flex-direction: column;
   min-height: 100vh; 
@@ -107,7 +108,7 @@
   .profileImage {
   height: 250px;
   width: 250px;
-  background-color:#878685 ;
+  background-color:#000000 ;
   border-radius: 50%;
   }
   
@@ -165,22 +166,34 @@
   }
   
   .header-content {
-  width: 100%;
-  display: flex;
-  flex-direction:row;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-  background-color: #6f6f6e;
+    width: 100%;
+    display: inline-block;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    background-color: #6f6f6e;
   }
+  
+  nav {
+    width: 100%;
+    display: inline-block;
+    justify-content: center;
+    text-align: center;
+  }
+  
+  ul {
+    display: flex;
+    justify-content: center;
+  }
+  
 
   .footer {
   display: flex;
   flex-direction: row;
   justify-content: center;
   text-align: center;
-  background-color: #6f6f6e;
-  border-radius: 10px 10px 0px 0px;
+  background-color: #6f6f6e; 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
   
@@ -198,9 +211,8 @@
   }
   
   nav {
-  display: flex;
+  display: inline-block;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
   padding: 20px;
   text-align: center;
@@ -211,7 +223,6 @@
   
   .navButtons a {
   font-weight: 500;
-  color: #0F2C59;
   text-decoration: inherit;
   padding: 2px;
   transition: color 0.25s; /* Add a color transition for smoother effect */
@@ -219,7 +230,7 @@
   
   .navButtons a:hover {
   color: #F8F0E5;
-  background-color: #0F2C59;
+  background-color: #1a448b;
   padding: 2px;
   border-radius: 10px;
   }
@@ -228,15 +239,15 @@
   .navButtons a:focus,
   .navButtons a:focus-visible {
   outline: none; /* Remove the default focus outline */
-  color: #F8F0E5; /* Change the text color on focus */
-  background-color: #0b66f0;
+  color: #fcc16f; /* Change the text color on focus */
+  background-color: #30f012;
   padding: 2px;
   
   }
   
   .message {
   text-align: center;
-  background-color: #F8F0E5;
+  background-color: #484138;
   padding: 5px;
   opacity: 1; /* Initially fully visible */
   transition: opacity 1s; /* Define the transition effect for opacity */
@@ -261,7 +272,7 @@
   }
   
   button:hover {
-  border-color: #0F2C59;
+  border-color: #fafbfc;
   }
   
   button:focus,
@@ -294,16 +305,7 @@
     padding: 20px; /* Add some padding to the project cards */
   }
   
-  .projectImageClass {
-    height: 150px; /* Adjust the image size */
-    width: 150px; /* Adjust the image size */
-  }
-  
-  .project a:hover {
-    color: #0F2C59; /* Change the color for links on hover */
-    background-color: transparent; /* Remove the background color on hover */
-  }
-  
+
   /* Add responsive styles for other elements as needed */
   }
   
@@ -346,20 +348,108 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: "/images/maxresdefault.jpg";
-  border-radius: 10px 10px 0px 0px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgba(26, 25, 25, 0.2);
+  background-color: rgb(47, 46, 46);
+  padding-top: 20px;
   }
 
+.landing h2 {
+  font-size: 2.5em;
+  line-height: 1.1;
+  color: #F8F0E5;
+  text-shadow: #6f6f6e 4px 4px 4px;
+  }
 
+.landing h3 {
+  font-size: 1.5em;
+  line-height: 1.1;
+  color: #F8F0E5;
+  }
+  #man {
+    color: red;
+}
 
-.navit {
+#works{
+    color: rgb(39, 211, 45);
+}
+  #home {
+    color: black;
+  }
+
+#call {
+    color: rgb(202, 109, 9);
+}
+
+.navButtons {
     display: inline-block;
-  
+    
+    justify-content: space-between;
+  }
+
+  .pictures {
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-around; /* Distribute the nav buttons evenly */
+    justify-content: center;
     text-align: center;
     background-color: #6f6f6e;
-    width: 100%;
-    padding: 10px 0; /* Add some vertical padding to the nav bar */
+    border-radius: 10px 10px 0px 0px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    margin: auto;
+    width: fit-content;
+    padding: 33px;
+    }
+
+    @media (max-width: 700px) {
+      .pictures {
+          flex-direction: column;
+      }
+  }
+  
+
+    .pictures img {
+      height: 250px;
+      width: 250px;
+      background-color:#000000 ;
+      border-radius: 50%;
+      }
+
+      .pictures img:hover {
+        height: 250px;
+        width: 250px;
+        background-color:#000000 ;
+        border-radius: 50%;
+        transform: scale(1.1);
+        transition: transform 0.5s;
+        }
+
+        .pictures img:active {
+          height: 250px;
+          width: 250px;
+          background-color:#000000 ;
+          border-radius: 50%;
+          transform: scale(1.5);
+          transition: transform 0.5s;
+          }
+
+          .pictures img:focus {
+            height: 250px;
+            width: 250px;
+            background-color:#000000 ;
+            border-radius: 50%;
+            transform: scale(1.5);
+            transition: transform 0.5s;
+            }
+
+
+.aboutMeWrapper h1 {
+  text-align: center;
+  justify-content: center;
+  color: #11141f;
+}
+
+.aboutMeWrapper  {
+  text-align: center;
+  justify-content: center;
+  color: #11141f;
 }
