resume updates. call done.

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,17 @@
   justify-content: center;
   }
   
+  .footer {
+    height: auto;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
+  
+
   .aboutMeWrapper {
   flex: 1; /* Expand and fill available space */
   padding: 20px;
@@ -573,4 +584,43 @@
   color: #F8F0E5;
   text-shadow: #6f6f6e 4px 4px 4px;
   }
+
+  .aboutMeWrapper h1 {
+    font-size: 2.5em;
+    line-height: 1.1;
+    color: #060606;
+    text-shadow: #6f6f6e 4px 4px 4px;
+
+    }
+  
+    .callpage {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5em;
+      line-height: 1.1;
+      color: #060606;
+      text-shadow: #6f6f6e 4px 4px 4px;
+    }
+
+#callp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.resume {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.resume:hover {
+  transform: scale(1.5);
+  transition: transform 0.5s;
 }
