--- a/src/index.css
+++ b/src/index.css
@@ -240,12 +240,12 @@
   transition: color 0.25s; /* Add a color transition for smoother effect */
   }
   
-  .navButtons a:hover {
+  /* .navButtons a:hover {
   color: #F8F0E5;
-  background-color: #1a448b;
+  background-color: #ffffff;
   padding: 2px;
   border-radius: 10px;
-  }
+  } */
   
   /* Style the focus state */
   .navButtons a:focus,
@@ -382,19 +382,34 @@
     color: red;
 }
 
+
+#home {
+    color: rgb(2, 2, 2);
+}
+
+#home:hover {
+    color: rgb(63, 180, 0);
+}
+
 #man:hover {
-    color: rgb(39, 233, 45);
+    color: rgb(0, 0, 160);
 }
 
 #works{
     color: rgb(39, 211, 45);
 }
-  #home {
-    color: black;
-  }
+
+#works:hover {
+    color: rgb(0, 0, 0);
+}    
+
 
 #call {
     color: rgb(202, 109, 9);
+}
+
+#call:hover {
+    color: rgb(255, 255, 255);
 }
 
 .navButtons {
@@ -566,6 +581,7 @@
     justify-content: center;
     text-align: center;
     padding-top: 20px;
+    width: 100%;
   }
 }
 
@@ -595,16 +611,16 @@
 
     }
   
-    .callpage {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.5em;
-      line-height: 1.1;
-      color: #060606;
-      text-shadow: #6f6f6e 4px 4px 4px;
-    }
+.callpage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+    line-height: 1.1;
+    color: #060606;
+    text-shadow: #6f6f6e 4px 4px 4px;
+     }
 
 #callp {
   display: flex;
